fix: wrap 1 blank insta

--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -50,7 +50,7 @@
   p {
     font-family: 'DM Sans', sans-serif;
     font-size: 13px;
-    line-height: 1;
+    line-height: 1.4;
     letter-spacing: 0.15em;
     color: #b6b6b6;
     text-transform: uppercase;
